# auto-arg-parse

./: CMakeLists.txt  readme.md
code/: Makefile
code/src/: exampleUsage.cpp  main.cpp
code/src/autoArgParse/: argParser.cpp  argParser.h  indentedLine.h  parseException.h
example/: CMakeLists.txt  exampleUsage.cpp
include/autoArgParse/: argHandlers.h  argParser.cpp  argParser.h  argParserBase.h  args.h  flags.h  indentedLine.h  parseException.h
src/: CMakeLists.txt  Makefile  exampleUsage.cpp
src/autoArgParse/: argHandlers.h  argParser.cpp  argParser.h  parseException.h
